--- a/resources/templates/components.html
+++ b/resources/templates/components.html
@@ -31,12 +31,12 @@
 	<a>Settings</a>
 </div>
 
-<div class="box box-station" th:fragment="station">
+<div class="box box-station pd-30" th:fragment="station">
 	<div class="title" th:text="${station.name}"></div>
 	<div><a class="button mg-0" th:href="@{'/stations/' + ${station.id}}">View</a></div>
 </div>
 
-<div class="box box-line" th:fragment="line">
+<div class="box box-line pd-30" th:fragment="line">
 	<div>
 		<div>
 			<div class="title" th:text="${line.departure}"></div>
