--- a/resources/templates/station.html
+++ b/resources/templates/station.html
@@ -10,13 +10,13 @@
         <script>reload()</script>
 
         <div class="container" id="reload">
-        	<div class="box">
-				<div class="title" style="margin-bottom: 20px;" th:text="${station.name}"></div>
-				<div style="display:flex; gap: 20px;">
+        	<div class="box pd-30">
+				<div class="title mg-b" th:text="${station.name}"></div>
+				<div style="display: flex; gap: 30px;">
 					<div class="width-100">
 						<span>Platforms: </span><i th:text="${station.platforms}"></i><br>
 					</div>
-					<a th:href="@{'/api/stations/' + ${station.id}}" target="blank" class="not-mobile">Raw Station Data ></a>
+					<a th:href="@{'/api/stations/' + ${station.id}}" target="blank" class="not-mobile">Raw Station Data &rarr;</a>
 				</div>
 			</div>
 			<h2 th:text="'Lines via station ' + ${station.name}"></h2>
