--- a/resources/templates/studio/edit/edit_stations.html
+++ b/resources/templates/studio/edit/edit_stations.html
@@ -16,11 +16,11 @@
 	        		<span th:if="${exists}">ID:</span>
 					<div th:if="${exists}"><span class="transparent-blue id" th:text="${station.id}"></span></div>
 	        		<span th:style="${exists} ? 'display: none' : ''">ID:</span>
-					<input th:style="${exists} ? 'display: none' : ''" type="text" th:field="*{id}" required>
+					<input th:style="${exists} ? 'display: none' : ''" type="text" th:field="*{id}" pattern="^([A-Za-z0-9]|-|_|@|.){3,20}$" title="You need between 3 and 20 characters, following characters are allowed A-Z, a-z, 0-9, _, -" >
 	        		<span>Name:</span>
 					<input type="text" th:field="*{name}" required>
 					<span>Platfroms:</span>
-					<input type="number" th:field="*{platforms}" min="1" max="99" value="1" required>
+					<input type="number" th:field="*{platforms}" min="1" max="99" value="1">
 					<a th:if="${exists}" class="button red width-100"  th:href="@{'/studio/stations/delete?id=' + ${station.id}}">Delete</a>
 					<a th:unless="${exists}" class="button red width-100" href="/studio/stations">Cancel</a>
 					<input type="submit" value="Save">
