Improved project structure

--- a/resources/templates/search.html
+++ b/resources/templates/search.html
@@ -12,8 +12,8 @@
 			<div th:unless="${param.query} == null">
 				<h2 th:text="'Search results for: ' + ${param.query}"></h2>
 				<th:block th:each="result : ${results}">
-					<th:block th:if="${result.class.name == 'eu.girc.pis.entities.Station'}" th:with="station=${#conversions.convert(result, 'eu.girc.pis.entities.Station')}" th:insert="components :: station"></th:block>
-					<th:block th:if="${result.class.name == 'eu.girc.pis.entities.Line'}" th:with="line=${#conversions.convert(result, 'eu.girc.pis.entities.Line')}" th:insert="components :: line"></th:block>
+					<th:block th:if="${result.class.name == 'eu.girc.pis.model.Station'}" th:with="station=${#conversions.convert(result, 'eu.girc.pis.model.Station')}" th:insert="components :: station"></th:block>
+					<th:block th:if="${result.class.name == 'eu.girc.pis.model.Line'}" th:with="line=${#conversions.convert(result, 'eu.girc.pis.model.Line')}" th:insert="components :: line"></th:block>
 				</th:block>
 				<div th:if="${results.isEmpty()}">
  					<div class="box">No search results found!</div>
