--- a/resources/static/resources/style.css
+++ b/resources/static/resources/style.css
@@ -1256,7 +1256,7 @@ a{
 .form-grid-1{grid-template-columns: minmax(auto, 300px);}
 .form-grid-2{grid-template-columns: fit-content(100%) minmax(auto, 300px);}
 .form-grid-4{grid-template-columns: fit-content(100%) minmax(auto, 300px) fit-content(100%) minmax(auto, 300px);}
-.form-grid-stations{grid-template-columns: minmax(120px, 250px) repeat(2, minmax(60px, 80px)) 80px repeat(2, minmax(60px, 80px)) 80px fit-content(100%);}
+.form-grid-stations{grid-template-columns: minmax(120px, 250px) minmax(60px, 80px) minmax(90px, 90px) 80px repeat(2, minmax(60px, 80px)) 80px fit-content(100%);}
 
 @media only screen and (max-width: 1024px){
 	.form-grid-4{grid-template-columns: fit-content(100%) minmax(auto, 300px);}
