Added SWD framework as resources

--- a/resources/templates/components.html
+++ b/resources/templates/components.html
@@ -1,8 +1,10 @@
 <th:block th:fragment="head">
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<link href="/resources/swd.css" rel="stylesheet">
 	<link href="/resources/style.css" rel="stylesheet">
 	<script src="/resources/jquery.js"></script>
+	<script src="/resources/swd.js"></script>
 	<script src="/resources/script.js"></script>
 	<link href="/resources/favicon.png" rel="icon">
 </th:block>
