Added user and password managing functions

--- a/resources/templates/forms/password.html
+++ b/resources/templates/forms/password.html
@@ -2,7 +2,7 @@
 <html>
     <head>
     	<div th:replace="components :: head"></div>
-        <title>PIS - Password</title>
+        <title>PIS - Change Password</title>
     </head>
     <body>
 		<div th:replace="components :: menu"></div>
