Fixed typo length

--- a/resources/templates/line.html
+++ b/resources/templates/line.html
@@ -43,7 +43,7 @@
 						<span>ID: </span><span class="transparent-blue id" th:text="${line.id}"></span><br>
 						<span>Type: </span><i th:text="${line.type.getName()}"></i><br>
 						<span>Number: </span><i th:text="${line.number}"></i><br>
-						<span>Lenght: </span><i th:text="${line.lenght}"></i><br>
+						<span>Lenght: </span><i th:text="${line.length}"></i><br>
 						<span>Operator: </span><i th:text="${line.operator}"></i><br>
 						<span>Driver: </span><i th:text="${line.driver}"></i><br>
 					</div>
